
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-modelflow"
version = "0.1.0"
description = "Test environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m model_flow.server.app
server = "model_flow.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["model_flow", "model_flow.server"]
package-dir = { "model_flow" = ".", "model_flow.server" = "server" }
